Actualizado con Action buttons

--- a/App_MenuOverFlow/app/src/main/res/values/strings.xml
+++ b/App_MenuOverFlow/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="item1">Opción 1</string>
     <string name="item2">Opción 2</string>
     <string name="item3">Opción 3</string>
+    <string name="buscar">Buscar</string>
+    <string name="compartir">Compartir</string>
 </resources>
