--- a/Frutiapp/app/src/main/res/values/strings.xml
+++ b/Frutiapp/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">Frutiapp</string>
     <string name="et_nombre">¿Cómo te llamas?</string>
     <string name="btn_jugar">Jugar</string>
+
+    <!--Nivel 1-->
+    <string name="et_vidas">Manzanas</string>
+    <string name="jugador_nombre">Jugador</string>
+    <string name="total_score">Score</string>
+    <string name="boton_sumar">Comprobar</string>
+    <string name="et_respuesta">Respuesta</string>
 </resources>
